# steno-drill

./: .gitignore  Cargo.toml  README.md  lap-import.sh  shell.nix
lapwing/: 10-single-syllable-rh-ch-sh-rch.txt  10-single-syllable-rh-n-j-lj.txt  10-test.txt  12-left-hand-single-syllable-orthographic-chords.txt  5-cvc.txt  5-single-syllable-EU.txt  5-single-syllable-basic-left-hand.txt  5-single-syllable-dbl.txt  5-test.txt  7-single-syllable-aeu.txt  7-single-syllable-aou.txt  7-single-syllable-oe-ou-and-oeu.txt  7-test.txt  8-single-syllable-ae.txt  8-single-syllable-aoe.txt  8-single-syllable-aoeu.txt  8-test.txt  9-single-syllable-rh-m-and-k.txt  9-single-syllable-rh-st.txt  9-test.txt
migrations/: 2022-03-02a-2022-03-06a.sql  2022-03-06a-2022-03-12a.sql  2022-03-12a-2022-04-14a.sql  2022-04-14a-2023-11-10a.sql
script/: burden.py  hard.sh  tolearn.py  update.sh
src/: db.rs  input.rs  lessons.rs  main.rs  stroke.rs  ui.rs
src/ui/: drill.rs  learn.rs
