[package]
name = "steno-drill"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossterm = "0.23"
rand = "0.8"
rusqlite = "0.27"
structopt = "0.3"
tui = "0.17"

# If we enable optimization during testing, we can run the long test
# every time as it only takes a few seconds.
[profile.test]
opt-level = 2
